app-alicloud-sonarqube.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sonar-dev
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: sonar-dev
  name: sonarqube-sts
spec:
  serviceName: "sonarqube"
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: sonarqube
          image: sonarqube:10.1.0-community
          args:
            - -Dsonar.web.context=/sonar
            - -Dsonar.core.serverBaseURL=https://dev.example.com/sonar
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
              protocol: TCP
          resources:
            requests:
              cpu: "0.5"
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 2Gi
          volumeMounts:
          - mountPath: "/opt/sonarqube/data/"
            name: sonar-data
          - mountPath: "/opt/sonarqube/extensions/"
            name: sonar-extensions
      imagePullSecrets:
        - name: sonarqube-secret-gitlab
      volumes:
      - name: sonar-data
        persistentVolumeClaim:
          claimName: sonarqube-pvc-data
      - name: sonar-extensions
        persistentVolumeClaim:
          claimName: sonarqube-pvc-extensions
  volumeClaimTemplates:
  - metadata:
      name: sonar-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: alicloud-disk-available
      resources:
        requests:
          storage: 20Gi
  - metadata:
      name: sonar-extensions
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: alicloud-disk-available
      resources:
        requests:
          storage: 20Gi
---
apiVersion: v1
kind: Service
metadata:
  namespace: sonar-dev
  name: sonarqube-svc
spec:
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: sonarqube
  clusterIP: None
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sonar-dev
  name: sonarqube-ingress
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - dev.example.com
  rules:
    - host: dev.example.com
      http:
        paths:
          - path: /sonar
            pathType: Prefix
            backend:
              service:
                name: sonarqube-svc
                port:
                  number: 9000
